[package]
name = "rusty-sience-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0.7"
reqwest = "0.11.23"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
select = "0.6.0"